[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main_script.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 39.0
margin_top = 89.0
margin_right = 264.0
margin_bottom = 176.0
text = "Clique para salvar os Dados"

[node name="Button2" type="Button" parent="."]
margin_left = 33.0
margin_top = 271.0
margin_right = 279.0
margin_bottom = 364.0
text = "Clique para criar a Lista"

[node name="Button3" type="Button" parent="."]
margin_left = 34.0
margin_top = 480.0
margin_right = 279.0
margin_bottom = 562.0
text = "Clique para ver o resultado, rs"

[node name="LineEdit_N" type="LineEdit" parent="."]
margin_left = 333.0
margin_top = 180.0
margin_right = 586.0
margin_bottom = 256.0
text = "Digite o n√∫mero desejado"
align = 1

[node name="LineEdit2_nome" type="LineEdit" parent="."]
margin_left = 334.0
margin_top = 394.0
margin_right = 582.0
margin_bottom = 475.0
text = "Digite um nome "
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 694.0
margin_top = 168.0
margin_right = 947.0
margin_bottom = 273.0

[node name="Label2" type="Label" parent="."]
margin_left = 699.0
margin_top = 392.0
margin_right = 941.0
margin_bottom = 491.0

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
